# bsag-jh61b

./: README.md  pyproject.toml
bsag_jh61b/: __init__.py  _plugin.py  _types.py  api.py  assessment.py  check_files.py  checkstyle_jar.py  compilation.py  copy_from_alternate_root.py  dependency_check.py  final_score.py  java_utils.py  lateness_penalty.py  magic_word.py  motd.py
